# HaskRel

./: README
HaskRel/: HaskRel.cabal  README.md  TODO  fixed-width-sample.html
HaskRel/examples/: AlgebraExample.hs  HFWTest.hs  SuppliersPartsExample.hs  Terminology.hs  algebraExample.sh  suppliersPartsDB.sh
HaskRel/examples/SuppliersPartsDB/: Default.hs  Definition.hs  README.md
HaskRel/src/Database/HaskRel/: FWTabulation.hs  HFWTabulation.hs  NonRel.hs  Order.hs  RDBMS.hs  RelMonoid.hs  Support.hs
HaskRel/src/Database/HaskRel/Relational/: Algebra.hs  Assignment.hs  Definition.hs  Expression.hs  Unicode.hs  Variable.hs
HaskRelTIP/: HaskRelTIP.cabal  src-rec
HaskRelTIP/examples/: AlgebraExample.hs  ExampleTypes.hs  SuppliersPartsExample.hs  algebraExample.sh  suppliersPartsDB.sh
HaskRelTIP/examples/SuppliersPartsDB/: Default.hs  Definition.hs  P.rv  S.rv  SP.rv
HaskRelTIP/src/Database/HaskRelTIP/: RDBMSTIP.hs  TIPFWTabulation.hs
HaskRelTIP/src/Database/HaskRelTIP/Relational/: Algebra.hs  Assignment.hs  Definition.hs  Expression.hs  Unicode.hs  Variable.hs
